--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "openai-proxy",
+  "name": "site-proxy",
   "version": "0.0.0",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230307.0",
+    "@cloudflare/workers-types": "^4.20240320.1",
     "@types/react": "^18.0.31",
-    "typescript": "^5.0.2",
-    "wrangler": "2.8.0"
+    "typescript": "^5.4.3",
+    "wrangler": "3.41.0"
   },
   "private": true,
   "scripts": {
-    "dev-cloudflare": "wrangler dev",
-    "deploy-cloudflare": "wrangler publish",
+    "dev-cf": "wrangler dev",
+    "deploy-cf": "wrangler deploy",
     "dev-next": "next",
     "vercel-build": "next build"
   },
