--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site-proxy",
+  "name": "cf-workers",
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240320.1",
